# shop_backend

./: .gitignore  .pdm.toml  pyproject.toml
server/: asgi.py  urls.py  wsgi.py
server/apps/Product/: apps.py  models.py  urls.py  views.py
server/apps/Product/migrations/: 0001_initial.py
server/apps/User/: apps.py  serializers.py  views.py
server/apps/User/migrations/: 0001_initial.py
server/apps/cart/: models.py  serializers.py  urls.py  views.py
server/apps/cart/migrations/: 0001_initial.py  0002_alter_cart_product_id.py
server/apps/catalogue/: apps.py  urls.py  views.py
server/apps/product/: serializers.py
server/apps/user/: models.py  serializers.py  urls.py
server/apps/user/migrations/: 0001_initial.py
server/database/: db.sqlite3
server/settings/: settings.py
